убрал комментарии ревьювера

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <!-- DONE Неиспользуемый код лучше удалить -->
-  
-  <!-- DONE Папка должна называться pages -->
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -18,9 +15,8 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#"
-          class="header__link" target="_blank">Узнать &rarr;</a>
+          class="header__link">Узнать &rarr;</a>
       </p>
-      <!-- DONE Эта картинка является контентным изображением, поэтому лучше вставить её через тег <img>. -->
       <img src="./images/header-image.png" alt="Картина 'Опять двойка'" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
@@ -80,17 +76,12 @@
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
           </li>
-          <!-- DONE Пустой элемент нужно удалить. Для регулирования положения элементов в сетке используйте css.
-Можно использовать отступы margin или flex-свойство gap: https://doka.guide/css/gap/#primer-s-fleksami -->
         </ul>
       </section>
 
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-        <!-- DONE Для увеличения семантики видео можно выстроить списком <ul>. Для <li> можно задать свой класс в соответствии с БЭМ, если понадобится -->
-        <!-- DONE Атрибуты width и height нужно убрать из html, по БЭМ вся стилизация должна быть описана в классе элемента -->
-
         <ul class="video__iframes">
           <li><iframe src="https://www.youtube.com/embed/5MgBikgcWnY" title="Джош Кауфман. Как выучить всё. Видео на YouTube"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -236,8 +227,6 @@
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <!-- DONE Логотипы можно оформить списком <ul>. Для <li> в таком случае допускается создание своего класса, названного по БЭМ, если он будет необходим. -->
-
         <ul class="resources__logo-zone">
           <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo"></a></li>
           <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo"></a></li>
