--- a/index.html
+++ b/index.html
@@ -228,10 +228,18 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo"></a></li>
-          <li><a href="#" class="resources__link" target="_blank"><img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo"></a></li>
+          <li><a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-arzamas.svg" alt="Лого Арзамас" class="resources__logo">
+          </a></li>
+          <li><a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-n1.svg" alt="Лого Н+1" class="resources__logo">
+          </a></li>
+          <li><a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-strelka.svg" alt="Лого Стрелка" class="resources__logo">
+          </a></li>
+          <li><a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-polka.svg" alt="Лого Полка" class="resources__logo">
+          </a></li>
         </ul>
       </section>
       
